# Nexum

./: AGENTS.md  Cargo.toml  README.md
docs/: branch-knowledge.md
docs/plans/: decisions-log.md
src/: attention.rs  capsule.rs  control_plane.rs  cutover.rs  events.rs  flags.rs  identity.rs  isolation.rs  lib.rs  ports.rs  restore.rs  routing.rs  runflow.rs  runtime_meta.rs  shadow.rs  shell.rs  stead.rs  store.rs  tls.rs
tests/: attention_unit.rs  capsule_behavior.rs  capsule_lifecycle_cli_e2e.rs  capsule_ports_cli_e2e.rs  control_plane_e2e.rs  control_plane_integration.rs  control_plane_snapshots.rs  cutover_cli_e2e.rs  cutover_events_cli_e2e.rs  cutover_gate_behavior.rs  cutover_gate_integration.rs  cutover_gate_snapshots.rs  events_cli_e2e.rs  flags_behavior.rs  flags_cli_e2e.rs  identity_policy_unit.rs  isolation_policy_unit.rs  niri_adapter_behavior.rs  niri_adapter_snapshots.rs  observability_integration.rs  parallel_restore_e2e.rs  parity_behavior.rs  parity_cli_e2e.rs  parity_snapshots.rs  resource_broker_integration.rs  restore_plan_behavior.rs  restore_runner_cli_e2e.rs  restore_runner_daemon_integration.rs  restore_runner_degraded_integration.rs  restore_runner_integration.rs  restore_runner_snapshots.rs  routing_cli_e2e.rs  routing_cli_snapshots.rs  routing_e2e.rs  routing_integration.rs  routing_snapshots.rs  routing_unit.rs  runtime_meta_unit.rs  shell_cli_e2e.rs  shell_plan_behavior.rs  (+10 more)
tests/snapshots/: control_plane_snapshots__control_plane_execution_contract.snap  cutover_gate_snapshots__cutover_decision_contract.snap  (+14 more)
