[package]
name = "nexum"
version = "0.1.0"
edition = "2024"
description = "Nexum control-plane primitives"
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "json"] }
proptest = "1.6"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
